# C---Memory---Algorithm-Visualizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: 01-architecture.md  02-module-map.md  03-data-flow.md  04-build-run-deploy.md  05-export-spec.md  06-roadmap.md  README.md
exports/: Stack_(LIFO)_20260601_175151.json
resources/i18n/: en.json  hr.json
src/: main.cpp
src/algorithms/: AlgorithmSimulator.cpp  AlgorithmSimulator.h
src/concurrency/: ConcurrencySimulator.cpp  ConcurrencySimulator.h
src/core/: I18nKey.h  PresetIO.cpp  PresetIO.h  SimulationEngine.cpp  SimulationEngine.h  SimulationTypes.h
src/memory/: MemorySimulator.cpp  MemorySimulator.h
src/ui/: MainWindow.cpp  MainWindow.h  MainWindowActions.cpp  MainWindowExportI18n.cpp  MainWindowPresetActions.cpp  MainWindowSupport.cpp  MainWindowSupport.h  MainWindowTimeline.cpp  MainWindowUi.cpp  VisualizationCanvas.cpp  VisualizationCanvas.h
tests/: SimulatorTests.cpp
